{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 38,
  "lineage": "cde8196c-8908-e53e-784a-7d4ca97fded9",
  "resources": [
    {
      "module": "module.aws_eip[\"eip01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad6d45656a83a2e5",
            "association_id": "eipassoc-0fbb1bffd86e264b7",
            "domain": "vpc",
            "id": "eipalloc-0ad6d45656a83a2e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c79f599f9b4edde",
            "private_dns": "ip-192-168-41-231.ec2.internal",
            "private_ip": "192.168.41.231",
            "public_dns": "ec2-52-70-11-73.compute-1.amazonaws.com",
            "public_ip": "52.70.11.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat01"
            },
            "tags_all": {
              "Name": "nat01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_eip[\"eip02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc47b024047d8ba0",
            "association_id": "eipassoc-06de01137ac538ddc",
            "domain": "vpc",
            "id": "eipalloc-0cc47b024047d8ba0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f201b4d71704e84f",
            "private_dns": "ip-192-168-90-240.ec2.internal",
            "private_ip": "192.168.90.240",
            "public_dns": "ec2-34-196-146-197.compute-1.amazonaws.com",
            "public_ip": "34.196.146.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat02"
            },
            "tags_all": {
              "Name": "nat02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway[\"igw01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:internet-gateway/igw-08d79963493bdd2ea",
            "id": "igw-08d79963493bdd2ea",
            "owner_id": "793593179810",
            "tags": {
              "Name": "My_IGW"
            },
            "tags_all": {
              "Name": "My_IGW"
            },
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nat_gateway[\"natgw01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad6d45656a83a2e5",
            "association_id": "eipassoc-0fbb1bffd86e264b7",
            "connectivity_type": "public",
            "id": "nat-0911f421cf6911c5a",
            "network_interface_id": "eni-02c79f599f9b4edde",
            "private_ip": "192.168.41.231",
            "public_ip": "52.70.11.73",
            "subnet_id": "subnet-01f53399e23342f32",
            "tags": {
              "Name": "natgw01"
            },
            "tags_all": {
              "Name": "natgw01"
            }
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nat_gateway[\"natgw02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc47b024047d8ba0",
            "association_id": "eipassoc-06de01137ac538ddc",
            "connectivity_type": "public",
            "id": "nat-0e1730079a2a30e5c",
            "network_interface_id": "eni-0f201b4d71704e84f",
            "private_ip": "192.168.90.240",
            "public_ip": "34.196.146.197",
            "subnet_id": "subnet-0d3ea7c6701d6e5f2",
            "tags": {
              "Name": "natgw02"
            },
            "tags_all": {
              "Name": "natgw02"
            }
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:route-table/rtb-08f0cee43c646d27d",
            "id": "rtb-08f0cee43c646d27d",
            "owner_id": "793593179810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d79963493bdd2ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "tags_all": {
              "Name": "Public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:route-table/rtb-06556167969e0ae64",
            "id": "rtb-06556167969e0ae64",
            "owner_id": "793593179810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0911f421cf6911c5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:route-table/rtb-0795b7ede0f7c6ff8",
            "id": "rtb-0795b7ede0f7c6ff8",
            "owner_id": "793593179810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e1730079a2a30e5c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RT01ssocname\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e072c70d5f57454",
            "route_table_id": "rtb-08f0cee43c646d27d",
            "subnet_id": "subnet-01f53399e23342f32"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RT02ssocname\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e072c70d5f57454",
            "route_table_id": "rtb-08f0cee43c646d27d",
            "subnet_id": "subnet-01f53399e23342f32"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RT03ssocname\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00939e2ce99752a9e",
            "route_table_id": "rtb-06556167969e0ae64",
            "subnet_id": "subnet-00fcef00dac2ef430"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RT04ssocname\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4677b20de0ea57",
            "route_table_id": "rtb-0795b7ede0f7c6ff8",
            "subnet_id": "subnet-0f2cbba28ec4aee73"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.example",
            "module.aws_internet_gateway.aws_internet_gateway.example",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnet.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"private-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:subnet/subnet-00fcef00dac2ef430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fcef00dac2ef430",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793593179810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "private-us-east-1b"
            },
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"private-us-east-1c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:subnet/subnet-0f2cbba28ec4aee73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2cbba28ec4aee73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793593179810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c"
            },
            "tags_all": {
              "Name": "private-us-east-1c"
            },
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"public-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:subnet/subnet-01f53399e23342f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f53399e23342f32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793593179810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"public-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:subnet/subnet-0d3ea7c6701d6e5f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3ea7c6701d6e5f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793593179810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-01175f4898b1deb6c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc[\"vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793593179810:vpc/vpc-01175f4898b1deb6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06a95c59d4d0a396d",
            "default_route_table_id": "rtb-0991fdc2a1834634b",
            "default_security_group_id": "sg-0893fbfb40422b58f",
            "dhcp_options_id": "dopt-0d97f70db6bcf58be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01175f4898b1deb6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0991fdc2a1834634b",
            "owner_id": "793593179810",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}